--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -26,7 +26,7 @@ body {
     }
 }
 
-img {
+.img-fluid {
     max-width: 100%;
 }
 
@@ -40,6 +40,10 @@ h3,
 h4,
 h5,
 h6 {
+    margin: 0;
+}
+
+p {
     margin: 0;
 }
 
