--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -13,6 +13,9 @@ body {
     max-width: 1200px;
     margin: 0 auto;
 }
+img {
+    max-width: 100%;
+}
 .btn {
     display: inline-block;
     background-color: transparent;
@@ -48,5 +51,5 @@ p {
 }
 
 svg {
-    display: block;
+    display: inline-block;
 }
