--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -24,6 +24,8 @@ img {
     text-decoration: none;
     color: #000;
     cursor: pointer;
+    font-family: inherit;
+    font-size: 16px;
     &:hover {
         text-decoration: none;
     }
